--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <ul class="list-group mb-4">
             <li class="list-group-item d-flex align-items-center" 
                 :class="{'text-decoration-line-through': element.done == true}"
-                v-for="(element, index) in todos">
+                v-for="(element, index) in todos"
+                @click="element.done = !element.done;">
 
                 {{ element.text }}
 
@@ -37,9 +38,9 @@
 
         
         <div class="input-group mb-3">
-            <input v-model="newToDo" @keyUp.enter="addNewToDo(newToDo)"
+            <input v-model.trim="newToDo" @keyUp.enter="addNewToDo(newToDo)"
             type="text" class="form-control" placeholder="Insert new Todo" aria-label="Username" aria-describedby="basic-addon1">
-            
+
             <button @click="addNewToDo(newToDo)" 
             class="btn btn-outline-secondary" type="button" id="button-addon2">Add New</button>
         </div>
